collected all paper-specific stuff in paper/

--- a/.gitignore
+++ b/.gitignore
@@ -15,20 +15,19 @@ unused_*/
 *.asv
 *.pkl
 *.npy
-experiments_phaserando/figures/
-experiments_realdata/figs/
-experiments_realdata/loss_curves
-src/cifti-matlab/
-synthetic_analysis/figs/
-synthetic_analysis/fits/
+*.h5
+paper/experiments_phaserando/figures/
+paper/experiments_realdata/figs/
+paper/experiments_realdata/loss_curves
+paper/synthetic_analysis/figs/
+paper/synthetic_analysis/fits/
 #any folder with unused_ in the name
 **/unused_*/
-*.h5
-
-data/external/*
-!data/external/Schaefer2018_100Parcels_7Networks_order_Tian_Subcortex_S1.dlabel.nii
-!data/external/Schaefer2018_100Parcels_7Networks_order_Tian_Subcortex_S1_label.txt
-data/processed/*
-data/raw/*
-data/results/*
-data/synthetic/*
+PCMM.egg-info/
+paper/data/external/*
+!paper/data/external/Schaefer2018_100Parcels_7Networks_order_Tian_Subcortex_S1.dlabel.nii
+!paper/data/external/Schaefer2018_100Parcels_7Networks_order_Tian_Subcortex_S1_label.txt
+paper/data/processed/*
+paper/data/raw/*
+paper/data/results/*
+paper/data/synthetic/*
